assets/style.css
*{
    box-sizing:border-box;
    margin:0;
    padding:0;
}
body{
    font-family:'Arial', sans-serif;
    display:flex;
    justify-content:center;
}
/*****************DIV CONTAINER*/
#container{
    width:80vw;
    margin-bottom:50px;
    display:flex;
    flex-direction:column;
}
/****************NAVEGAÇÃO*/
nav{
    height:100px;
    width:100%;
    display:flex;
    justify-content:space-between;
    align-items:center;
    overflow:hidden;
}
nav #links{
    width:380px;
    display:flex;
    justify-content:space-between;
    align-items:center;
}
#links a{
    text-decoration:none;
    color:#0d0d0d;
}
#links a:hover{
    color:#f51e1e;
}
/************************MAIN */
main{
    width:100%;
    justify-content:space-between;
    display:flex;
    flex-direction:row;
}
main section{
    width:69%;
}
section img{
    width:100%;
}
section article{
    display:flex;
    margin-top:2em;
    gap:1em;

}
article h1{
    width:48%;
    font-size:3em;
}
/*******************ÁREA DE DESCRIÇÃO E BOTÃO*/
#description-button{
    width:48%;
    display:flex;
    flex-direction:column;
    gap:1.5em;
    justify-content:space-between;

}
#description-button p{
    font-size:1.3em;
}
#description-button button{
    width:190px;
    height:40px;
    color:#fff;
    background-color:#fe7944;
    font-size:1em;
    border:none;
    letter-spacing:2px;
}
#description-button button:hover{
    cursor:pointer;
    background-color:rgb(0, 0, 19);
}
/*******************ÁREA INFERIOR*/
footer{
    margin-top:20px;
    display:flex;
    gap:0.9em;
}
footer img{
    width:110px;
}
.footer-sections{
    display:flex;
}
.footer-descriptions{
    padding-left:20px;
    display:flex;
    flex-direction:column;
    justify-content:space-around;
}
.footer-descriptions h1{
    color:#7e7979;
}
.footer-descriptions a{
    text-decoration:none;
    font-weight:bolder;
    color:#000;
}
.footer-descriptions a:hover{
    color:#fe7944;
}
/*****************BARRA Á DIREITA*/
aside{
    width:28%;
    display:flex;
    flex-direction:column;
    background-color:rgb(0, 0, 19);
    padding:20px;
}
aside h1, aside a{
    margin:20px 0;
}
aside h1{
    font-size:2em;
    color:#f7ba50;
}
aside a{
    color:#fff;
    font-weight:bolder;
    text-decoration:none;
}
aside a:hover{
    color:#f7ba50;
}
aside p{
    color:#fff;
}
aside hr{
    margin-top:20px;
}

/******************* LAYOUT DISPOSITIVOS MÓVEIS */
@media screen and (max-width:500px){
    body{
        overflow-x:hidden;
    }
    #container{
        width:95vw;
    }
    /* #links a{
        color:#fff;
    } */
    main, main section, section article,main aside, footer{
        width:100%;
    }
    main{
        flex-direction:column;
    }
    section img{
        width:100%;
    }
    article h1, #description-button{
        width:100%;
    }
    #description-button button{
        margin:20px 0;
    }
    section article{
        flex-direction:column;
    }
    main aside{
        margin-top:30px;
    }
    footer{
        flex-direction:column;
    }
    /*navegação mobile*/
    /*campo que apareçe e some*/
    #links{
        position:absolute;
        top:100px;
        right:0;
        transform:translate(100%);
        flex-direction:column;
        height:90%;
        background-color:rgb(0, 0, 19);
        justify-content:space-around;
    }
    nav #links{
        width:65%;
        justify-content:space-around;
    }
    #links a{
        color:#fff;
    }
    /*botão abre e fecha*/
    #open, #close{
        width:40px;
        cursor:pointer;
    }
}

